--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
       "api-management",
       "dreamfactory"
   ],
-  "addons": ["heroku-postgresql:hobby-dev"],
+  "addons": ["heroku-postgresql:mini"],
   "buildpacks": [
     {
         "url": "https://github.com/heroku/heroku-buildpack-cli"
